--- a/code.html
+++ b/code.html
@@ -48,10 +48,10 @@ https://gist-it.appspot.com/github/bmuellerhstat/website-portfolio-example/raw/m
 -->
         <div class="tab-content">
             <div id="index" class="tab-pane fade in active">
-                <script src="https://gist-it.appspot.com/github/melaniep7867/award-generator-project/raw/master/FILEPATH?footer=0"></script>
+                <script src="https://gist-it.appspot.com/github/melaniep7687/award-generator-project/raw/master/index.html?footer=0"></script>
             </div>
             <div id="style" class="tab-pane fade">
-                <script src="https://gist-it.appspot.com/github/melaniep7867/award-generator-project/raw/master/FILEPATH?footer=0"></script>
+                <script src="https://gist-it.appspot.com/github/melaniep7687/award-generator-project/raw/master/?footer=0"></script>
             </div>
         </div>
     </div>
